update libs & gradle.
port to Kotlin.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Person App</string>
+    <string name="update_btn_text">Update</string>
+    <string name="edit_btn_save_text">Save</string>
 </resources>
